--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "tree_sitter_c==0.23.1",
     "tree_sitter_cpp==0.23.1",
     "tree_sitter_java==0.23.2",
+    "networkx>=3.3",
+    "pydot>=3.0.3",
 ]
 authors = [{ name = "SunBK201", email = "sunbk201gm@gmail.com" }]
 description = "Next-generation codebase analysis toolkit."
