--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,12 @@ dependencies = [
     "tree_sitter_c==0.23.1",
     "tree_sitter_cpp==0.23.1",
     "tree_sitter_java==0.23.2",
+    "tree_sitter_python==0.23.6",
+    "tree_sitter_javascript==0.23.1",
     "networkx>=3.3",
     "pydot>=3.0.3",
     "chardet>=5.2.0",
+    "multilspy==0.0.15",
 ]
 authors = [{ name = "SunBK201", email = "sunbk201gm@gmail.com" }]
 description = "Next-generation codebase analysis toolkit."
