--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pydot>=3.0.3",
     "chardet>=5.2.0",
     "multilspy==0.0.15",
+    "tqdm>=4.66.1",
 ]
 authors = [{ name = "SunBK201", email = "sunbk201gm@gmail.com" }]
 description = "Next-generation codebase analysis toolkit."
