--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "scubatrace"
-version = "0.6.5"
+version = "0.6.6"
 dependencies = [
     "tree_sitter==0.23.2",
     "tree_sitter_c==0.23.1",
@@ -13,6 +13,7 @@ dependencies = [
     "tree_sitter_python==0.23.6",
     "tree_sitter_javascript==0.23.1",
     "networkx>=3.3",
+    "pygraphviz==1.14",
     "pydot>=3.0.3",
     "chardet>=5.2.0",
     "multilspy==0.0.15",
