--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -8,9 +8,6 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
-    environment:
-      name: pypi
-      url: https://pypi.org/p/scubatrace
     permissions:
       id-token: write
 
@@ -18,6 +15,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
+          repository: SunBK201/ScubaTrace
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
