fix: update token reference in GitHub Actions workflow for code checkout

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: SunBK201/ScubaTrace
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.ACTION }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
