--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "tree_sitter_python==0.23.6",
     "tree_sitter_javascript==0.23.1",
     "networkx>=3.3",
-    "pygraphviz==1.14",
+    "pygraphviz>=1.13",
     "pydot>=3.0.3",
     "chardet>=5.2.0",
     "multilspy==0.0.15",
