--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ tree_sitter_java==0.23.2
 tree_sitter_python==0.23.6
 tree_sitter_javascript==0.23.1
 networkx>=3.3
+pygraphviz>=1.13
 pydot>=3.0.3
-sphinx
 chardet>=5.2.0
 multilspy==0.0.15
 tqdm>=4.66.1
