--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,12 @@ dependencies = [
     "tree_sitter_java==0.23.5",
     "tree_sitter_python==0.23.6",
     "tree_sitter_javascript==0.23.1",
+    "tree_sitter_c_sharp==0.23.1",
+    "tree_sitter_go==0.23.4",
+    "tree_sitter_php==0.23.11",
+    "tree_sitter_ruby==0.23.1",
+    "tree_sitter_rust==0.24.0",
+    "tree_sitter_swift==0.0.1",
     "networkx>=3.3",
     "pygraphviz>=1.13",
     "pydot>=3.0.3",
