--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,10 +28,10 @@ authors = [{ name = "SunBK201", email = "sunbk201gm@gmail.com" }]
 description = "Next-generation codebase analysis toolkit."
 keywords = ["codebase", "parsing", "ast", "analysis"]
 readme = "README.md"
+license = "GPL-3.0-or-later"
 requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
 ]
